--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dicoding.myproject.Login"
-    >
+    tools:context="com.dicoding.myproject.Login">
     <EditText
         android:id="@+id/username1"
         android:layout_width="match_parent"
@@ -35,8 +35,13 @@
         android:text="Enter"
         android:layout_below="@+id/Password1"
         android:layout_alignParentStart="true"
-        android:onClick="check"
+        android:onClick="login"
         />
+    <android.support.design.widget.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_navigation"></android.support.design.widget.BottomNavigationView>
 
 
 </RelativeLayout>
