--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dicoding.myproject.MainActivity">
+    android:id="@+id/table_layout"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
 
     <TextView
         android:id="@+id/batteryLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="84dp"
-        android:text="Battery Level : " />
+        android:text="Battery Level : "
+        android:layout_below="@+id/off"
+        android:layout_alignParentStart="true" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -29,15 +25,6 @@
         android:layout_below="@+id/batteryLevel"
         android:max="100" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="87dip"
-        android:text="Hendra Textile"
-        android:textSize="20dip" />
 
     <Button
         android:id="@+id/button4"
@@ -45,18 +32,63 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button6"
+        android:layout_gravity="center"
         android:onClick="goTo"
+
         android:text="go to hendra textile link" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/progressBar"
+        android:layout_column="0"
+        android:layout_marginBottom="30dp"
+        android:layout_toStartOf="@+id/batteryLevel"
+        android:onClick="OnClick"
+        android:text="ON" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:onClick="galery"
+        android:text="Galery"
+        android:layout_below="@+id/imageButton"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/button7" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="56dp"
+        android:layout_column="0"
         android:onClick="test"
-        android:text="Menu" />
+        android:text="Menu"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/off"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_gravity="center"
+        android:text="OFF"
+        android:layout_below="@+id/button"
+        android:layout_alignParentEnd="true" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button5"
+        android:layout_column="3"
+        android:onClick="change"
+        android:src="@drawable/ic_assignment_ind_24dp" />
 
     <Button
         android:id="@+id/button5"
@@ -66,7 +98,6 @@
         android:layout_below="@+id/button4"
         android:onClick="register"
         android:text="Register" />
-
     <!--<Button-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
@@ -85,35 +116,11 @@
     <!--android:layout_centerVertical="true"-->
     <!--android:layout_alignParentStart="true"-->
     <!--android:id="@+id/textView2" />-->
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.BottomNavigationView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button5"
-        android:onClick="change"
-        android:src="@drawable/ic_assignment_ind_24dp" />
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_navigation"></android.support.design.widget.BottomNavigationView>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ON"
-        android:onClick="OnClick"
-        android:id="@+id/button7"
-        android:layout_above="@+id/progressBar"
-        android:layout_toStartOf="@+id/batteryLevel"
-        android:layout_marginBottom="30dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="OFF"
-        android:onClick="bottomClick"
-        android:id="@+id/off"
-        android:layout_alignTop="@+id/button7"
-        android:layout_alignEnd="@+id/progressBar"
-        android:layout_marginEnd="33dp" />
 
 </RelativeLayout>
