--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,38 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dicoding.myproject.Register">
-
+    tools:context="com.dicoding.layout_inputcontrol.LinearLayoutActivity">
 
     <EditText
-        android:hint="Username"
-        android:layout_width="match_parent"
+        android:id="@+id/name"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:hint="Nama" />
+
+    <EditText
         android:id="@+id/username"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentEnd="true" />
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Username"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="textEmailAddress" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Password"
-        android:hint="Password"
-        android:layout_below="@+id/username"
-        android:layout_alignParentStart="true"
-        android:inputType="textPassword"
-        />
-    <Button
+        android:hint="Prodi" />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        android:layout_below="@+id/Password"
-        android:layout_alignParentStart="true"
-        android:onClick="reg"/>
+        android:text="Model Bau Yang diminati" />
+
+    <TableRow>
+
+        <CheckBox
+            android:id="@+id/item1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/item1" />
+
+        <CheckBox
+            android:id="@+id/item2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/item2" />
+
+        <CheckBox
+            android:id="@+id/item3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/item3" />
+
+        <CheckBox
+            android:id="@+id/item4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/item4" />
+    </TableRow>
+    <TextView
+        android:text="Gender"
+        />
+    <TableRow>
+        <RadioButton
+            android:id="@+id/gender1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gender1" />
+
+        <RadioButton
+            android:id="@+id/gender2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gender2" />
+    </TableRow>
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:onClick="check"
+        android:text="Submit" />
 
 
-</RelativeLayout>
+</TableLayout>
