--- a/app/src/main/res/layout/fragment_fragment2.xml
+++ b/app/src/main/res/layout/fragment_fragment2.xml
@@ -20,7 +20,7 @@
         android:layout_width="120dp"
         android:layout_height="100dp"
         android:id="@+id/button3"
-        android:layout_gravity="center_horizontal|bottom"
+        android:layout_gravity="right|bottom"
         android:src="@drawable/ic_account_balance_24dp"
         android:scaleType="fitXY"
         android:onClick="test"
