--- a/app/src/main/res/layout/fragment_frgmnt1.xml
+++ b/app/src/main/res/layout/fragment_frgmnt1.xml
@@ -5,29 +5,71 @@
     tools:context="com.dicoding.myproject.Frgmnt1">
 
     <!-- TODO: Update blank fragment layout -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="104dp"
-        android:layout_height="138dp"
-        android:id="@+id/imageView2"
-        android:layout_gravity="left|top"
-        android:src="@drawable/b1" />
 
-    <ImageView
-        android:layout_width="118dp"
-        android:layout_height="158dp"
-        android:id="@+id/imageView3"
-        android:layout_gravity="left|bottom"
-        android:src="@drawable/b2" />
+        <ImageView
+            android:layout_width="118dp"
+            android:layout_height="158dp"
+            android:id="@+id/imageView2"
+            android:layout_gravity="left|top"
+            android:src="@drawable/b1" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="\n\n asdasdasdasd"
+            android:gravity="right"/>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="fill_parent"
+
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="goTo"
-        android:text="go to Link"
-        />
+        android:layout_gravity="center">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="\n\n asdasdasdasd"
+            android:gravity="right"/>
+
+        <ImageView
+            android:layout_width="118dp"
+            android:layout_height="158dp"
+            android:id="@+id/imageView4"
+            android:layout_gravity="left|center_vertical"
+            android:src="@drawable/b2"
+            />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom">
+
+
+        <ImageView
+            android:layout_width="118dp"
+            android:layout_height="158dp"
+            android:id="@+id/imageView"
+            android:layout_gravity="left|top"
+            android:src="@drawable/b1" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="\n\n asdasdasdasd"
+            android:gravity="right"/>
+
+
+
+
+    </RelativeLayout>
 
 </FrameLayout>
