--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Battery Level : "
-        android:layout_below="@+id/off"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="33dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -67,17 +68,8 @@
         android:onClick="test"
         android:text="Menu"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:id="@+id/off"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_column="1"
-        android:layout_gravity="center"
-        android:text="OFF"
-        android:layout_below="@+id/button"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="37dp" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -120,6 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:id="@+id/nav"
         app:menu="@menu/bottom_navigation"></android.support.design.widget.BottomNavigationView>
 
 
