--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/accountasd"
+    <item android:id="@+id/account"
         android:icon="@drawable/account"
         android:title="Account"/>
-    <item android:id="@+id/shopasd"
+    <item android:id="@+id/shop"
         android:icon="@drawable/shop"
         android:title="shop"/>
 
-    <item android:id="@+id/homeasd"
+    <item android:id="@+id/home"
         android:icon="@drawable/home"
         android:title="Home"
         />
